# mgram

./: .clang-format  .gitignore  CMakeLists.txt
scripts/: format.bat  format.sh  prepare-build.sh
snd/: README.md
src/: audio.cpp  audio.h  clientData.h  constants.h  main.cpp  notificationSender.cpp  notificationSender.h  singleton.h  tdManager.cpp  tdManager.h  uiLogin.cpp  uiLogin.h  uiLoginPhone.cpp  uiLoginPhone.h  uiMainFrame.cpp  uiMainFrame.h  uiMainWindow.cpp  uiMainWindow.h  uiTaskBarIcon.cpp  uiTaskBarIcon.h
